BouvetGrandPrixAngular/shared_styles.css
body {
    background-color: #000!important;
    overflow-x:hidden;
    overflow-y:hidden;
}

.white_text{
    color:white;
}

.grey_text{
    color:#d0d0d0;
}

.underline_text{
    text-decoration: underline;
}

.bouvet_orange_text{
    color:#f37021;
}

.no_margin{
    margin:0px 0px 0px 0px !important;
}

.no_padding{
    padding:0px 0px 0px 0px !important;
}

.bouvet_background_orange{
    background-color:#f37021;
}

.bouvet_orange_border{
    border: 1px solid;
    border-color:#f37021;
}

/*
.bouvet_button{
    background-color:transparent;
    color:white;
    padding: 5px 25px 5px 25px;
    margin-top: 15px;
    font-size: 12px;
}

.bouvet_button:hover{
    background-color:#f37021;
    border-color:#808080;
}
*/


/*
   Bouvet Button Css3 Hover styling starts here.
*/
.bouvet_button{
    font-family: 'Kohinoor Bangla';
    padding: 0px;
    font-size: 12px;
    line-height: 37px;
   /* margin: 15px auto;*/
    border: none;
    background: transparent;
    -webkit-perspective: 1000px;
    perspective: 1000px;
    text-align: center;
}

.bouvet_button span{

    text-transform: uppercase;
    letter-spacing: 3px;
    background: transparent;
    height: 40px;
    width: 190px;
    position: relative;
    display: inline-block;
    -webkit-transition: -webkit-transform 0.3s;
    transition: transform 0.3s;
    -webkit-transform-origin: 50% 0;
    transform-origin: 50% 0;
    -webkit-transform-style: preserve-3d;
    transform-style: preserve-3d;
    border: 1px solid #f37021;
    color: white;
}

.bouvet_button span:before{

    position: absolute;
    top: 100%;
    left: -1px;
    height: 40px;
    width: 191px;
    background: #f37021;
    color:#ffffff;
    content: attr(data-hover);
    -webkit-transition: background 0.3s;
    transition: background 0.3s;
    -webkit-transform: rotateX(-90deg);
    transform: rotateX(-90deg);
    -webkit-transform-origin: 50% 0;
    transform-origin: 50% 0;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    border: 1px solid #f37021;

}


.bouvet_button:hover span{
    -webkit-transform: rotateX(90deg) translateY(-22px);
    transform: rotateX(90deg) translateY(-22px);
}

/*
    Bouvet Button Css3 Hover styling ends here.
*/

#welcome_carousel .carousel-inner{

    overflow: visible;
}



.background_dark{
    background-color:rgba(0, 0, 0, 0.70);
}

.background_grey{
    background-color:rgba(0, 0, 0, 0.30);
}


/* unvisited link */
a:link {
    text-decoration: none;      
}

/* visited link */
a:visited {
    text-decoration: none;      
}

/* mouse over link */
a:hover {
    text-decoration: none;      
}

/* selected link */
a:active {
    text-decoration: none;      
}

.toplist_table_postion{
    padding:10px 0px 10px 0px;
    width:35px;
    text-align:center;
}


.toplist_table_name{
    padding: 10px 10px 10px 20px;
    width: 40%;
    font-family: 'OpenSansRegular',"Helvetica Neue",sans-serif;
}

.toplist_table_firm{
    width: 20%;
    font-family: 'OpenSansRegular',"Helvetica Neue",sans-serif;
}

.toplist_table_score{
    font-family: 'OpenSansRegular',"Helvetica Neue",sans-serif;
    text-align:center;
}

.toplist_table_score_div{
    width:100%;
    padding-right:20px;
    border-left: solid 1px;
    border-color:#f37021;
}

.toplist_table_best_time_glyph{
    padding-left:10px;
    padding-right:10px;
}

.table_first_place{
    width:100%;
    background-color:rgba(0, 0, 0, 0.70);
    border: solid 1px;
    border-color:#f37021;
    margin-bottom:15px;
}


.navbar_bottom_game_logo_div{
    pointer-events:none;
}

.table_record{
    width:100%;
    background-color:rgba(0, 0, 0, 0.70);
    margin-bottom:15px;
    height: 40px;
}

@font-face {
    font-family: 'Kohinoor Bangla';
    src: url('app/fonts/KohinoorBangla.eot'); /* IE9 Compat Modes */
    src: url('app/fonts/KohinoorBangla.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
    url('app/fonts/KohinoorBangla.woff') format('woff'), /* Modern Browsers */
    url('app/fonts/KohinoorBangla.ttf')  format('truetype'), /* Safari, Android, iOS */
    url('app/fonts/KohinoorBangla.svg#bbce4d667c58f15ca19219bb39d0a219') format('svg'); /* Legacy iOS */

    font-style:   normal;
    font-weight:  400;
}


@font-face {
    font-family: 'DAGGERSQUARE';
    src: url('app/fonts/DAGGERSQUARE.eot'); /* IE9 Compat Modes */
    src: url('app/fonts/DAGGERSQUARE.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
    url('app/fonts/DAGGERSQUARE.woff') format('woff'), /* Modern Browsers */
    url('app/fonts/DAGGERSQUARE.ttf')  format('truetype'), /* Safari, Android, iOS */
    url('app/fonts/DAGGERSQUARE.svg#d02e21bd02a940790d80e4fdeac6d42c') format('svg'); /* Legacy iOS */

    font-style:   normal;
    font-weight:  400;
}

@font-face {
    font-family: 'DAGGERSQUARE_OBLIQUE';
    src: url('app/fonts/DAGGERSQUARE_OBLIQUE.eot'); /* IE9 Compat Modes */
    src: url('app/fonts/DAGGERSQUARE_OBLIQUE.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
    url('app/fonts/DAGGERSQUARE_OBLIQUE.woff') format('woff'), /* Modern Browsers */
    url('app/fonts/DAGGERSQUARE_OBLIQUE.ttf')  format('truetype'), /* Safari, Android, iOS */
    url('app/fonts/DAGGERSQUARE_OBLIQUE.svg#1e91e374818370144489d52258ad256e') format('svg'); /* Legacy iOS */

    font-style:   oblique;
    font-weight:  400;
}

p{
    font-family: 'OpenSansRegular', sans-serif;
}

button{
    font-family: 'OpenSansRegular', sans-serif;
    letter-spacing: 1px;

    -ms-touch-action: manipulation;	/* IE10  */
    touch-action: manipulation;
}

.letter_spacing{
    letter-spacing: 1px;
}

h1{
    font-family: 'DAGGERSQUARE_OBLIQUE', sans-serif;
}

h2{
    font-family: 'DAGGERSQUARE_OBLIQUE', sans-serif;
}

.daggerSquare{
    font-family: 'DAGGERSQUARE_OBLIQUE', sans-serif;
}

.text_letters_space_l{
    letter-spacing: 3px;
}

button:focus{
    outline: none !important;
}

.leaflet-container {
    background-color:rgb(50, 50, 50) !important;
}

.noselect {
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Chrome/Safari/Opera */
    -khtml-user-select: none; /* Konqueror */
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* Internet Explorer/Edge */
    user-select: none; /* Non-prefixed version, currently
                                  not supported by any browser */
}
.flag-element{
    width: 193px;
    height: auto;
}


#splash {
    position: relative;
    width:100%;
    height: 100%;

}

#splash .splash-container{

    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    width: 300px;
    display: inline-block;
    transform: translate(-50%,-50%);
    margin-top: -20px;
}

#splash .splash-container h2 {
    font-size: 8vw;
}


#splash .loader{
    position: absolute;
    top:70px;
    left: 50%;
}

.loader,
.loader:before,
.loader:after {
    background: #f17030;
    -webkit-animation: load1 1s infinite ease-in-out;
    animation: load1 1s infinite ease-in-out;
    width: 1px;
    height: 4px;
    color: #f17030;
}
.loader {
    text-indent: -9999em;
    margin: 88px auto;
    position: relative;
    font-size: 11px;
    -webkit-transform: translateZ(0);
    -ms-transform: translateZ(0);
    transform: translateZ(0);
    -webkit-animation-delay: -0.16s;
    animation-delay: -0.16s;
}
.loader:before,
.loader:after {
    position: absolute;
    top: 0;
    content: '';
}
.loader:before {
    left: -10px;
    -webkit-animation-delay: -0.32s;
    animation-delay: -0.32s;
}
.loader:after {
    left: 10px;
}
@-webkit-keyframes load1 {
    0%,
    80%,
    100% {
        box-shadow: 0 0;
        height: 4em;
    }
    40% {
        box-shadow: 0 -2em;
        height: 5em;
    }
}
@keyframes load1 {
    0%,
    80%,
    100% {
        box-shadow: 0 0;
        height: 4em;
    }
    40% {
        box-shadow: 0 -2em;
        height: 5em;
    }
}


@media (max-width: 768px) {

    #toplist_div .table_record .grey_text{

        font-size: 12px;
    }

    #toplist_div .table_first_place .grey_text{

        font-size: 12px;
    }
}

@media (min-width:765px) {
    #splash .splash-container {
        width: 100%;
    }
    #splash .splash-container h2 {
        font-size: 54px;
    }
}

